--- a/ldsn-scorecard/index.html
+++ b/ldsn-scorecard/index.html
@@ -3,11 +3,12 @@
 <head>
     <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.min.css'></link>
     <link rel='stylesheet' href='bower_components/chartist/dist/chartist.min.css'></link>
+    <link rel='stylesheet' href='http://bootswatch.com/yeti/bootstrap.min.css'></link>
     <link rel='stylesheet' href='css/main.css'></link>
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">LDSN Scorecard</a>
@@ -19,11 +20,12 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Estimated <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Actual</a></li>
+            <li><a href="#">Actual <span class="sr-only">(current)</span></a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Project Title</h1>
+          <h1 id='project-title'></h1>
+          <h3 id='project-site'></h2>
 
           <div class="row height-control">
             <div id='page-views-chart' class='ct-chart ct-perfect-fourth height-control'></div>
