--- a/ldsn-scorecard/index.html
+++ b/ldsn-scorecard/index.html
@@ -26,19 +26,25 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 id='project-title'></h1>
           <h3 id='project-site'></h2>
-
           <div class="row height-control">
-            <div id='page-views-chart' class='ct-chart ct-perfect-fourth height-control'></div>
+            <div id='page-views-chart' class='ct-chart  height-control'></div>
           </div>
-
+          <div class='row'>
+            
+            <ul class='legend'>
+              <li class='legend-series-a'><div class ='square'></div>January</li>
+              <li class='legend-series-b'><div class ='square'></div>February</li>
+              <li class='legend-series-c'><div class ='square'></div>March</li>
+            </ul>
+          </div>
           <div class="table-responsive">
             <table id='estimated-table' class="table table-striped ">
               <thead>
                 <tr>
-                  <th>Month</th>
-                  <th>Estimated Uniques</th>
-                  <th>Estimated Page Views</th>
-                  <th>Estimated Views</th>
+                  <th>Metric</th>
+                  <th>January</th>
+                  <th>February</th>
+                  <th>March</th>
                 </tr>
               </thead>
               <tbody>
