--- a/brt-jsclass/index.html
+++ b/brt-jsclass/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script type='text/javascript' src='js.class.min.js'></script>
+		<script type='text/javascript' src='js.class.js'></script>
 		<script type='text/javascript'>
 			var AdClass = Class({
 				create: function(type, size){
