--- a/brt-jsclass/index.html
+++ b/brt-jsclass/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<script type='text/javascript' src='js.class-noconflict.js'></script>
 		<script type='text/javascript'>
-			var AdClass = Class({
+			var AdClass = JSClass({
 				create: function(type, size){
 					this.type = type;
 					this.size = size;
