--- a/brt-jsclass/index.html
+++ b/brt-jsclass/index.html
@@ -9,7 +9,7 @@
 				}, 
 				get:{
 					allSettings: function(){
-						return [adType, adSize];
+						return [this.adType, this.adSize];
 					}
 				}, 
 				set:{
