--- a/brt-jsclass/index.html
+++ b/brt-jsclass/index.html
@@ -1,7 +1,10 @@
 <html>
 	<head>
 		<script type='text/javascript' src='js.class.min.js'></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		
 		<script type='text/javascript'>
+			/*
 			var AdClass = Class({
 				create: function(adType, adSize){
 					this.adType = adType;
@@ -27,9 +30,12 @@
 			console.log("Type of slider:", testAd1.adType);
 			console.log("Ad size:", testAd1.adSize);
 
+			*/
+
 		</script>
 	</head>
 	<body>
-		
+		<script type='text/javascript' src='diagnostic.js'></script>
 	</body>
+	
 </html>
