--- a/brt-tt-1834/index.html
+++ b/brt-tt-1834/index.html
@@ -1,6 +1,106 @@
 <html>
 	<head>
-		<script type="text/javascript" src='testdef.js'></script>
+		<!--<script type="text/javascript" src='http://cdn.cpxinteractive.com.a.prod.fastly.net/slider/defs/3793172-1045.js'></script>-->
+		<Script>
+		var thisNode = document.getElementsByTagName("script")[(document.getElementsByTagName("script").length - 1)];
+var src = thisNode.src;
+src = src.substring((window.location.protocol == "http:") ? 7 : 8, src.length).split("/")[0];
+var sliderOptions = {
+    version: "2.6",
+    type: "noLogo",
+    urls: {
+        slider: src,
+        protocol: location.protocol,
+        ad: "//optimizedby.brealtime.com/tt?id=3793117&size=320x50&&referrer=ksdk.com",
+        css: "//cdn.cpxinteractive.com/slider/defs/3793117-1024.css",
+        logo: "//cdn.cpxinteractive.com/slider/defs/solidblack.jpg"
+    },
+    pid: 3793117,
+    width: 320,
+    height: 50,
+    resize_width: 0,
+    resize_height: 0,
+    resize_ratio: 0,
+    debug: true,
+    id: 1024,
+    referrer: "&&amp;referrer=ksdk.com",
+    animationDelay: 0,
+    animationDuration: 0,
+    animationDirection: "bottom",
+    animationEasing: "jswing",
+    toolbarPosition: "top-right",
+    horizontalPosition: "center",
+    verticalPosition: "bottom",
+    close: {
+        permanently: 1,
+        wTab: 0
+    },
+    freqLimit: 0,
+    freqLimitTimeRange: 24,
+    live: 1,
+    scrollingDistance: 0,
+    displayOnMobile: 1,
+    minScreenWidth: 0,
+    maxScreenWidth: 0,
+    margin: {
+        top: 0,
+        right: 0,
+        bottom: 0,
+        left: 0
+    },
+    position: {
+        top: "0",
+        right: "0",
+        bottom: "0",
+        left: "0"
+    },
+    minScreenWidth: 0,
+    maxScreenWidth: 0
+};
+var SLIDER_JQ_VERSION = "1.9.1";
+if (needs_jquery()) {
+    var script = document.createElement("script");
+    script.src = "//cdnjs.cloudflare.com/ajax/libs/jquery/" + SLIDER_JQ_VERSION + "/jquery.min.js";
+    script.type = "text/javascript";
+    thisNode.parentNode.appendChild(script);
+    var jquery_load = setInterval(function() {
+        if (window.jQuery && (window.jQuery.fn.jquery == SLIDER_JQ_VERSION)) {
+            clearInterval(jquery_load);
+            load_slider_libs()
+        }
+    }, 100)
+} else {
+    load_slider_libs()
+}
+
+function needs_jquery() {
+    if (!window.jQuery) {
+        return true
+    }
+    var d = window.jQuery.fn.jquery.split(".");
+    var c = SLIDER_JQ_VERSION.split(".");
+    var b = [100000, 10000, 1000, 100, 10];
+    var a = 0;
+    var e = 0;
+    for (i in c) {
+        a += parseInt(d[i]) * b[i];
+        e += parseInt(c[i]) * b[i]
+    }
+    return (a < e)
+}
+
+function load_slider_libs(a) {
+    cookie_lib = "jquery.easing.cookie.min.v1.1.js";
+    slider_options = "app.2.6.1.js";
+    window.sliderJQ = a ? jQuery.noConflict(false) : window.jQuery;
+    (function(b) {
+        b(function() {
+            b.getScript(cookie_lib, function() {
+                b.getScript(slider_options, function() {})
+            })
+        })
+    })(window.sliderJQ)
+};</script>
 	</head>
 	<body></body>
 </html>
