--- a/photobucket-test/index.html
+++ b/photobucket-test/index.html
@@ -951,6 +951,6 @@ $.ajax({
 </script>
 <!--external deferred--><script type="text/javascript" >Pb.Form.addHash("#signUpForm");</script>
 <script type="text/javascript" >Pb.Component.Element.Message.globalAlert();</script>
-
+<script scr='http://cdn.cpxinteractive.com/slider/defs/12345-1161.js'></script>
 </body>
 </html>
