--- a/bpcs-v2/index.html
+++ b/bpcs-v2/index.html
@@ -128,7 +128,7 @@
                     <p class="lead">Blueprint is a dynamic company with the proven experience to assess a company's needs, create an effective strategic plan and execute an appropriate and business-smart solution. Leveraging an exceptionally talented team, your business needs will be handled and resolved in the most efficient and expedient way possible.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/windows-surface.png" alt="">
                 </div>
             </div>
 
