--- a/bpcs-v2/2/blog-home-1.html
+++ b/bpcs-v2/2/blog-home-1.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Blueprint Consulting</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -145,7 +145,7 @@
                     <a href="#">Blog Post Title</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Blueprint Consulting</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
                 <hr>
@@ -163,7 +163,7 @@
                     <a href="#">Blog Post Title</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Blueprint Consulting</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
                 <hr>
@@ -181,7 +181,7 @@
                     <a href="#">Blog Post Title</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Blueprint Consulting</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
                 <hr>
@@ -272,7 +272,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Blueprint Consulting 2015</p>
                 </div>
             </div>
         </footer>
