--- a/bpcs-v2/2/blog-post.html
+++ b/bpcs-v2/2/blog-post.html
@@ -287,7 +287,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Blueprint Consulting 2014</p>
                 </div>
             </div>
         </footer>
