--- a/bpcs-v2/index.html
+++ b/bpcs-v2/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>With Blueprint</h1>
-                        <h3>You're not alone..</h3>
+                        <h3>You're not alone...</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
