--- a/bpcs-v2/2/index.html
+++ b/bpcs-v2/2/index.html
@@ -229,7 +229,7 @@
         <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Stuff that Blueprint does..</h2>
+                <h2 class="page-header">Stuff that Blueprint does...</h2>
             </div>
             <div class="col-md-6">
                 <ul>
