--- a/irt-timeline/index.html
+++ b/irt-timeline/index.html
@@ -5,11 +5,10 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.jqtimeline.css" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.jqtimeline.js"></script>
-<title>Demo of jQuery timeline plugin</title>
+<title>IRT Timeline</title>
 <link href="http://www.jqueryscript.net/css/top.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<hr style="margin-bottom:50px"/>
 <div id="myTimeline"></div>
 <script type="text/javascript">
 					var ev = [{
@@ -38,18 +37,5 @@
 							}
 						});
 		</script>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36251023-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 </body>
 </html>
