--- a/irt-timeline/index.html
+++ b/irt-timeline/index.html
@@ -11,22 +11,36 @@
 <body>
 <div id="myTimeline"></div>
 <script type="text/javascript">
+					// 1/1/2015, 1/15/2015, 4/1/2015, 4/3/2015, 4/7/2015, 4/10/2015
+
 					var ev = [{
 							id : 1,
 							name : "Ticket opened",
-							on : new Date(2015,0,15)
+							on : new Date(2015,0,1)
+						},{
+							id : 2,
+							name : "Ticket comments updated",
+							on : new Date(2015,1,15)
+						},{
+							id : 3,
+							name : "Resolution plan sign off",
+							on : new Date(2015,3,1)
 						},{
 							id : 4,
 							name : "Resolution plan sign off",
-							on : new Date(2015,1,12)
+							on : new Date(2015,3,3)
+						},{
+							id : 5,
+							name : "Ticket comments updated",
+							on : new Date(2015,3,7)
 						},{
 							id : 7,
 							name : "Final Champion Sign Off",
-							on : new Date(2015,2,9)
+							on : new Date(2015,4,9)
 						},{
 							id : 8,
 							name : "Ticket Closed",
-							on : new Date(2015,2,10)
+							on : new Date(2015,4,10)
 						}]
 			var tl = $('#myTimeline').jqtimeline({
 							events : ev,
