--- a/irt-timeline/index.html
+++ b/irt-timeline/index.html
@@ -27,7 +27,7 @@
 							on : new Date(2015,3,1)
 						},{
 							id : 4,
-							name : "Resolution plan sign off",
+							name : "More ticket comments updated",
 							on : new Date(2015,3,3)
 						},{
 							id : 5,
