--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -38,8 +38,8 @@
             </div>
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="work.html">OUR WORK</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">OUR WORK</a></li>
                     <li><a href="http://bpcs.com/team.html">OUR TEAM</a></li>
                     <li><a href="#services">WHAT WE DO</a></li>
                     <li><a href="#contact">CONTACT</a></li>
@@ -49,14 +49,16 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
+
+    <!--HOME SECTION END  -->
     <div id="home">
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
 
-                    <h1>FLAWLESS
-                    <h2>You Think, We Deliver </h2>
+                    <h1>OUR WORK
+                    <h2>Excellence in Execution</h2>
                     <p class="p-cls"></p>
                 </div>
 
@@ -64,22 +66,52 @@
         </div>
 
     </div>
-    <!--HOME SECTION END  -->
     <section id="services">
         <div class="container">
             <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">WHAT WE DO</h2>
+                    <h2 class="head-set">Case Studies</h2>
+                </div>
+            </div>
+            <div class="row text-center row-space">
+
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-desktop  fa-5x"></i>
+                    <h4>CPXi Slider</h4>
                     <p>
-                        Blueprint Consulting Services provides progressive business management and IT solutions. Our goal is to address business and technology needs for clients and collaborate with companies in architecting their future. Blueprint has a simple focus: identify and deliver measurable outcomes and provide exceptional results.
+                        CPXi wanted something awesome..
+                    </p>
+                    <p>
+                        <a href="#">Read more</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-mobile  fa-5x"></i>
+                    <h4>Microsoft IRT </h4>
+                    <p>
+                        Microsoft also wanted something awesome..
+                    </p>
+                    <p>
+                        <a href="#">Read more</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-tablet  fa-5x"></i>
+                    <h4>Amazon App Store</h4>
+                    <p>
+                        Amazon wanted something awesome too..
+                    </p>
+                    <p>
+                        <a href="#">Read more</a>
                     </p>
                 </div>
             </div>
-            <div class="row text-center">
+
+            <div class="row text-center row-space">
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-recycle  fa-5x"></i>
-                    <h4 class="head-set">Application Development</h4>
+                    <i class="fa fa-mobile  fa-5x"></i>
+                    <h4>Expedia</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -87,68 +119,31 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-desktop  fa-5x"></i>
-                    <h4 class="head-set">Cloud & Collaboration </h4>
+                    <h4>Hulu</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-bolt  fa-5x"></i>
-                    <h4 class="head-set">Service Management & Support</h4>
+                    <i class="fa fa-tablet  fa-5x"></i>
+                    <h4>Monster Energy Drinks</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
                     </p>
                 </div>
             </div>
+
+
         </div>
     </section>
     <!--SERVICES SECTION END  -->
-    <div class="parallax-like">
-        <div class="overlay">
-
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <div>
-                            <strong>49</strong>
-                            <p>
-                                Projects
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <div>
-                            <strong>3</strong>
-                            <p>
-                                Locations
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 ">
-                        <div>
-                            <strong>120+</strong>
-                            <p>
-                                Employees
-                            </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--PARALLAX LIKE / STATS SECTION END  -->
     <section id="works">
         <div class="container">
             <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">Featured Case Studies</h2>
-                    <p>
-                        <a href="#">View all</a>
-                    </p>
+                    <h2 class="head-set">White Papers</h2>
                 </div>
             </div>
             <div class="row text-center portfolio-item">
