--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -50,6 +50,9 @@
     </div>
     <!-- NAVBAR CODE END -->
 
+
+
+
     <!--HOME SECTION END  -->
     <div id="home">
         <div class="overlay">
@@ -66,6 +69,23 @@
         </div>
 
     </div>
+
+    <div class="sticky-wrapper"><nav class="subnav">
+    <div id="vertical-filter" class="status-container">
+        <ul class="content">
+
+            <li class="item"><a href="#products">CASE STUDIES</a></li>
+            <li class="item"><a href="#people">WHITE PAPERS</a></li>
+            <li class="item"><a href="#pods">CONTACT US</a></li>
+            <li class="item"><a href="#studies">OUR CLIENTS</a></li>
+
+            <span class="icon-down-arrow-block" style="left: 0px;"></span>
+        </ul>
+    </div>
+</nav></div>
+
+
+
     <section id="services" class='container-alt'>
         <div class="container">
             <div class="row">
