--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -74,10 +74,9 @@
     <div id="vertical-filter" class="status-container">
         <ul class="content">
 
-            <li class="item"><a href="#products">CASE STUDIES</a></li>
-            <li class="item"><a href="#people">WHITE PAPERS</a></li>
-            <li class="item"><a href="#pods">CONTACT US</a></li>
-            <li class="item"><a href="#studies">OUR CLIENTS</a></li>
+            <li class="item"><a href="#services">CASE STUDIES</a></li>
+            <li class="item"><a href="#works">WHITE PAPERS</a></li>
+            <li class="item"><a href="#clients">OUR CLIENTS</a></li>
 
             <span class="icon-down-arrow-block" style="left: 0px;"></span>
         </ul>
