--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -39,9 +39,8 @@
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">OUR WORK</a></li>
-                    <li><a href="http://bpcs.com/team.html">OUR TEAM</a></li>
-                    <li><a href="#services">WHAT WE DO</a></li>
+                    <li><a href="#">SOLUTIONS</a></li>
+                    <li><a href="http://bpcs.com/team.html">TEAM</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
@@ -77,7 +76,7 @@
             <li class="item"><a href="#services">CASE STUDIES</a></li>
             <li class="item"><a href="#works">WHITE PAPERS</a></li>
             <li class="item"><a href="#clients">OUR CLIENTS</a></li>
-
+            <li class="item"><a href="#awards">AWARDS</a></li>
             <span class="icon-down-arrow-block" style="left: 0px;"></span>
         </ul>
     </div>
