--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -72,11 +72,9 @@
     <div class="sticky-wrapper"><nav class="subnav">
     <div id="vertical-filter" class="status-container">
         <ul class="content">
-
             <li class="item"><a href="#examples">PORTFOLIO</a></li>
             <li class="item"><a href="#clients">CLIENTS</a></li>
-            <li class="item"><a href="#awards">AWARDS</a></li>
-            <span class="icon-down-arrow-block" style="left: 0px;"></span>
+            <li class="item"><a href="#awards">RECOGNITION</a></li>
         </ul>
     </div>
 </nav></div>
