--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -115,29 +115,42 @@
                     <h2>PORTFOLIO</h2>
                 </div>
             
-                <div class="col-md-8">
-                    <div class='row white-paper-entry'>
-                        <div class='col-md-2'><i class="fa fa-pied-piper-alt  fa-4x"></i></div>
+                <div class="col-md-4">
+                    <div class='white-paper-entry'>
+                        <div class='col-md-3'><i class="fa fa-pied-piper-alt  fa-4x"></i></div>
 
-                        <div class='col-md-10'>
+                        <div class='col-md-8'>
                             <h4>AdReady Slider Ad Unit</h4>
                             <p>AdReady needed some really cool stuff for their product catalog. We hooked them up.</p>
                             <a href='#'>Read the white paper</a>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-4">
+                    <div class='white-paper-entry'>
+                        <div class='col-md-3'><i class="fa fa-line-chart  fa-4x"></i></div>
 
-                    <div class='row white-paper-entry'>
-                        <div class='col-md-2'><i class="fa fa-line-chart  fa-4x"></i></div>
-
-                        <div class='col-md-10'>
+                        <div class='col-md-8'>
                             <h4>Microsoft IRT</h4>
                             <p>Microsoft has some stuff</p>
                             <a href='#'>Read the white paper</a>
                         </div>
                     </div>
-
-
                 </div>
+
+                <div class="col-md-4">
+                    <div class='white-paper-entry'>
+                        <div class='col-md-3'><i class="fa fa-pied-piper  fa-4x"></i></div>
+
+                        <div class='col-md-8'>
+                            <h4>Microsoft Talis</h4>
+                            <p>Microsoft has some other stuff they wanted. We did it.</p>
+                            <a href='#'>Read the white paper</a>
+                        </div>
+                    </div>
+                </div>
+
+                
             </div>
         </div>
     </section>
