--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/bpcs-logo.png" alt="" class="img-responsive" />
+                    <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive" />
                 </a>
             </div>
             <div class="navbar-collapse collapse navbar-right scroll-me">
