--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -72,16 +72,16 @@
     <div class="sticky-wrapper"><nav class="subnav">
     <div id="vertical-filter" class="status-container">
         <ul class="content">
-            <li class="item"><a href="#examples">PORTFOLIO</a></li>
+            <li class="item"><a href="#portfolio">PORTFOLIO</a></li>
             <li class="item"><a href="#clients">CLIENTS</a></li>
-            <li class="item"><a href="#awards">RECOGNITION</a></li>
+            <li class="item"><a href="#recognition">RECOGNITION</a></li>
         </ul>
     </div>
 </nav></div>
 
 
 
-    <section id="examples" class='container-alt'>
+    <section id="portfolio" class='container-alt'>
         <div class="container">
             <div class="row">
                 <h2>FEATURED EXAMPLES</h2>
@@ -107,7 +107,7 @@
         </div>
     </section>
     <!--SERVICES SECTION END  -->
-    <section id="works" class='container-alt-gray'>
+    <section class='container-alt-gray'>
         <div class="container">
             <div class="row">
                 <div class="row">
@@ -122,7 +122,7 @@
                         <div class='col-md-8'>
                             <h4>AdReady Slider Ad Unit</h4>
                             <p>AdReady needed some really cool stuff for their product catalog. We hooked them up.</p>
-                            <a href='#'>Read the white paper</a>
+                            <a href='#'>Read more</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                         <div class='col-md-8'>
                             <h4>Microsoft IRT</h4>
                             <p>Microsoft has some stuff</p>
-                            <a href='#'>Read the white paper</a>
+                            <a href='#'>Read more</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                         <div class='col-md-8'>
                             <h4>Microsoft Talis</h4>
                             <p>Microsoft has some other stuff they wanted. We did it.</p>
-                            <a href='#'>Read the white paper</a>
+                            <a href='#'>Read more</a>
                         </div>
                     </div>
                 </div>
@@ -171,9 +171,9 @@
     </div>
     </section>
 
-    <section id="awards" class='container-alt-accent'>
+    <section id="recognition" class='container-alt-gray'>
     <div class="container">
-        <h2>AWARDS</h2>
+        <h2>RECOGNITION</h2>
         <div class="row">
             <div class="col-md-3">
                 <img src="http://bpcs.com/images/footerpartner.png" alt="" class="img-responsive" />
