--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -39,8 +39,8 @@
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">SOLUTIONS</a></li>
-                    <li><a href="http://bpcs.com/team.html">TEAM</a></li>
+                    <li><a href="work.html">SOLUTIONS</a></li>
+                    <li><a href="team.html">TEAM</a></li>
                     <li><a href="#contact">CONNECT</a></li>
                 </ul>
             </div>
