--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -84,35 +84,35 @@
             
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-pied-piper-alt  fa-4x"></i></div>
+                        <div class='col-md-3'><i class="fa fa-road  fa-4x"></i></div>
 
                         <div class='col-md-8'>
-                            <h4>AdReady Slider Ad Unit</h4>
-                            <p>AdReady needed some really cool stuff for their product catalog. We hooked them up.</p>
-                            <a href='#'>Read more</a>
+                            <h4>Infrastructure Engineer</h4>
+                            <p>Seattle, WA</p>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1120/infrastructure-engineer/job?in_iframe=1'>View job</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-line-chart  fa-4x"></i></div>
+                        <div class='col-md-3'><i class="fa fa-flask  fa-4x"></i></div>
 
                         <div class='col-md-8'>
-                            <h4>Microsoft IRT</h4>
-                            <p>We did so much cool stuff for IRT. We pushed the envelope.</p>
-                            <a href='#'>Read more</a>
+                            <h4>Software Developer II</h4>
+                            <p>Bellevue, WA</p>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1122/software-developer-ii/job?in_iframe=1'>View job</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-pied-piper  fa-4x"></i></div>
+                        <div class='col-md-3'><i class="fa fa-coffee  fa-4x"></i></div>
 
                         <div class='col-md-8'>
-                            <h4>Microsoft Talis</h4>
-                            <p>Microsoft has some other stuff they wanted. We did it.</p>
-                            <a href='#'>Read more</a>
+                            <h4>Java Engineer</h4>
+                            <p>Seattle, WA</p>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1119/java-engineer/job?in_iframe=1'>View job</a>
                         </div>
                     </div>
                 </div>
