--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -67,7 +67,7 @@
     <div id="vertical-filter" class="status-container">
         <ul class="content">
             <li class="item"><a href="#careers">CAREERS</a></li>
-            <li class="item"><a href="#leadership">LEADERSHIP</a></li>
+            <li class="item"><a href='#leadership'>LEADERSHIP</a></li>
             <li class="item"><a href="#culture">CULTURE</a></li>
         </ul>
     </div>
@@ -122,8 +122,7 @@
         </div>
     </section>
     <!--WORKS / PORTFOLIO SECTION END  -->
-    
-    <section id="leadership" class='container-alt-gray'>
+    <section id='leadership' class='container-alt-gray'>
     <div class="container">
         <h2>LEADERSHIP</h2>
         <div class="row">
