--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -41,7 +41,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="work.html">SOLUTIONS</a></li>
                     <li><a href="team.html">TEAM</a></li>
-                    <li><a href="#contact">CONNECT</a></li>
+                    <li><a href="connect.html">CONNECT</a></li>
                 </ul>
             </div>
         </div>
