--- a/bpcs-v3/connect.html
+++ b/bpcs-v3/connect.html
@@ -146,8 +146,35 @@
     <!--WORKS / PORTFOLIO SECTION END  -->
     <section id="blog" class='container-alt'>
         <div class="container">
-            <h2>BLOG</h2>
             <div class="row">
+                    <h2>BLOG</h2>
+            </div>
+            <div class="row">
+
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-comments  fa-5x"></i>
+                    <h4 class="head-set">Do You Need An App For That?</h4>
+                    <p>
+                        Recently, I was in the good company of a group of friends and acquaintances, enjoying some food, wine, and cigars. Towards the end of the evening, conversations shifted from sports, current events, religion and politics to business and technology by a couple of guys who were co-founders of a winery startup.
+                        <a href='http://bpcs.com/app.php'>Read more</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-calendar  fa-5x"></i>
+                    <h4 class="head-set">Developing For After </h4>
+                    <p>
+                        During the application development process, we strive to meet the requirements of the customer. What often falls out of sight is the time after the application is deployed by the customer. Thinking past development is a key factor to success.
+                        <a href='http://bpcs.com/developing.php'>Read more</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-bolt  fa-5x"></i>
+                    <h4 class="head-set">Less Talking & More Listening</h4>
+                    <p>
+                        “The most basic of all human needs is the need to understand and to be understood. The best way to understand people is to listen to them.” -Dr. Ralph Nichols
+                        <a href='http://bpcs.com/listening.php'>Read more</a>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
