--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
 
-                    <h1>BLUEPRINT</h1>
+                    <h1>WELCOME</h1>
                     <h2>Excellence In Motion</h2>
                     <p class="p-cls"></p>
                 </div>
