--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -64,7 +64,7 @@
 
     </div>
     <!--HOME SECTION END  -->
-    <section id="services" class='container-alt-gray'>
+    <section id="services" class='container-alt'>
         <div class="container">
             <div class="row">
                     <h2>WHAT WE DO</h2>
