--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1>OUR TEAM
-                    <h2>Best in class</h2>
+                    <h2>Superior Execution, Every Time</h2>
                     <p class="p-cls"></p>
                 </div>
 
@@ -126,19 +126,32 @@
     <div class="container">
         <h2>LEADERSHIP</h2>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4 team-box">
+            <div class='team-title'>The Boss</div>
                 <img src="http://bpcs.com/img/ryan_pic.jpg" alt="" class="img-responsive" />
-                <div class='team-title'>The Boss</div>
+                
+                <h3>Ryan Neal</h3>
+                <p>Ryan Neal is a talented investor, director, and advisor with more than ten years of experience in collaborating with the owners and managers of private companies to increase their value. With a focus and specialty in high-tech and custom manufacturing environments, Ryan brings a diverse skill set and the passion to affect long-lasting, strategic partnerships with companies and individuals.</p>
+                
+                <p>Ryan has significant experience leveraging resources in many industries to make companies successful, including his experience in business development, project management, change management, and strategic consulting. Ryan brings a dedicated commitment to constant improvement, which is critical to achieving transformative results.</p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4 team-box">
                 <img src="http://bpcs.com/img/kyle_pic.jpg" alt="" class="img-responsive" />
+                <div class='team-title'>The Hammer</div>
+                <h3>Kyle Wagoner</h3>
+                <p>Kyle is an experienced and connected leader in the technology services industry, with more than 20 years of business experience ranging from transforming the customer experience for companies through IT and Customer Support to building and leading high performing organizations that change the way companies engage and support their customers and partners. Kyle joined Blueprint as the VP of Operations after a distinguished career at Microsoft, where he served in key roles ranging from IT Business Unit Director to Customer Support Director to Customer Partner Experience Director, with a focus on cloud services.</p>
+<p>Kyle has a track record of solving complex business problems through a focus on people, process, and technology, using tools such as: ITIL-based frameworks, Six Sigma-based process improvement, support models, business tool development and company-wide frameworks, automation, and real-time dashboards. Kyle graduated from the University of Washington. In his free time, Kyle is an avid golfer, enjoys traveling (usually related to golfing), and spending time with his wife Amy, daughter Kaylee, and their very large dog Izzy.</p>
             </div>
-             <div class="col-md-3">
+             <div class="col-md-4 team-box">
                 <img src="http://bpcs.com/img/jesse_pic.jpg" alt="" class="img-responsive" />
+                <div class='team-title'>The Money</div>
+                <h3>Jesse Perbix</h3>
+                <p>Jesse Perbix has over a decade in the consulting industry. From startups to multi-million dollar corporations, Mr. Perbix has experience with the full corporate spectrum. His passion lies in helping small to mid-sized companies succeed. Jesse believes that by nurturing the heart of a business, its people, you can achieve success. As CFO at Blueprint, Jesse focuses on financing, operations and human capital management.</p>
             </div>
-             <div class="col-md-3">
+             <!--<div class="col-md-3">
                 <img src="http://bpcs.com/img/andy_pic.jpg" alt="" class="img-responsive" />
-            </div>
+                <div class='team-title'>The Techie</div>
+            </div>-->
         </div>
 
     </div>
