--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -60,7 +60,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
 
                     <h1>SOLUTIONS
-                    <h2>Intentional & Focused</h2>
+                    <h2>Creating The Next Big Thing</h2>
                     <p class="p-cls"></p>
                 </div>
 
