--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -55,7 +55,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
 
                     <h1>WELCOME</h1>
-                    <h2>Excellence In Motion</h2>
+                    <h2>Superior Execution, Every Time</h2>
                     <p class="p-cls"></p>
                 </div>
 
