--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -53,8 +53,8 @@
             <!-- overylay class usage -->
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <h1>OUR TEAM
-                    <h2>Superior Execution, Every Time</h2>
+                    <h1>THE TEAM
+                    <h2>Positive, Accountable & Creative</h2>
                     <p class="p-cls"></p>
                 </div>
 
