--- a/bpcs-v3/connect.html
+++ b/bpcs-v3/connect.html
@@ -213,7 +213,7 @@
             <div id="vertical-filter" class="status-container">
                 <ul class="content">
                     <li class="item"><a href="#socialmedia">SOCIAL MEDIA</a></li>
-                    <li class="item"><a href='#locations'>LOCATIONS</a></li>
+                    <li class="item"><a href='#locations'>LOCATION</a></li>
                     <li class="item"><a href="#blog">BLOG</a></li>
                     <li class="item"><a href="#contact">CONTACT US</a></li>
                 </ul>
