--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -1,4 +1,5 @@
 ﻿<html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -14,15 +15,14 @@
     <link href="assets/css/font-awesome.css" rel="stylesheet" />
     <!-- CUSTOM STYLES -->
     <link href="assets/css/style.css" rel="stylesheet" />
-	<!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-
 </head>
+
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -44,21 +44,15 @@
                     <li><a href="connect.html">CONNECT</a></li>
                 </ul>
             </div>
-
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-
-
-
-
     <!--HOME SECTION END  -->
     <div id="solutions">
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
-
                     <h1>SOLUTIONS
                     <h2>Creating The Next Big Thing</h2>
                     <p class="p-cls"></p>
@@ -212,23 +206,31 @@
 
     </div>
     </section>
-    <!-- CLIENTS SECTION END-->
-    <footer>
-        © 2015 bpcs.com | All Rights Reserved.
-    </footer>
-    <!-- FOOTER SECTION END-->
-    <!-- REQUIRED SCRIPTS FILES -->
-    <!-- CORE JQUERY FILE -->
-    <script src="assets/js/jquery-1.11.1.js"></script>
-    <!-- REQUIRED BOOTSTRAP SCRIPTS -->
-    <script src="assets/js/bootstrap.js"></script>
-    <!-- BACKGROUND VIDEO PLUGIN  -->
-    <script src="assets/js/jquery.mb.YTPlayer.js"></script>
-    <!-- SCROLLING SCRIPTS PLUGIN  -->
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <!-- CUSTOM SCRIPTS   -->
-    <script src="assets/js/custom.js"></script>
-
+    <section id="callToAction" class='container-alt-accent'>
+    <div class="container">
+        <div class="row text-center">
+           <div class='col-md-6 col-md-offset-3'>
+            <h1>Interested in working with us?</h1>
+                    <button onClick="location.href='team.html'" class="btn btn-primary btn-block">Check out the team</button>
+                </div>
+            </div>
+        </div>
+        </section>
+        <footer>
+            © 2015 bpcs.com | All Rights Reserved.
+        </footer>
+        <!-- FOOTER SECTION END-->
+        <!-- REQUIRED SCRIPTS FILES -->
+        <!-- CORE JQUERY FILE -->
+        <script src="assets/js/jquery-1.11.1.js"></script>
+        <!-- REQUIRED BOOTSTRAP SCRIPTS -->
+        <script src="assets/js/bootstrap.js"></script>
+        <!-- BACKGROUND VIDEO PLUGIN  -->
+        <script src="assets/js/jquery.mb.YTPlayer.js"></script>
+        <!-- SCROLLING SCRIPTS PLUGIN  -->
+        <script src="assets/js/jquery.easing.min.js"></script>
+        <!-- CUSTOM SCRIPTS   -->
+        <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
