updated for Casey

--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -50,7 +50,7 @@
     <div id="home">
         <div class="container">
             <div class="col-md-8 col-md-offset-2 text-center">
-                <h1>IDEAS</h1>
+                <h1>CASEY</h1>
                 <h2>Superior Execution, Every Time</h2>
                 <p class="p-cls"></p>
             </div>
