--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -135,7 +135,7 @@
             <div class="col-md-4 team-box">
                 <img src="http://bpcs.com/img/kyle_pic.jpg" alt="" class="img-responsive" />
                 <div class='team-title'>The Hammer</div>
-                <h3>Kyle Wagoner</h3>
+                <h3>Kyle Wagner</h3>
                 <p>Kyle is an experienced and connected leader in the technology services industry, with more than 20 years of business experience ranging from transforming the customer experience for companies through IT and Customer Support to building and leading high performing organizations that change the way companies engage and support their customers and partners. Kyle joined Blueprint as the VP of Operations after a distinguished career at Microsoft, where he served in key roles ranging from IT Business Unit Director to Customer Support Director to Customer Partner Experience Director, with a focus on cloud services.</p>
 <p>Kyle has a track record of solving complex business problems through a focus on people, process, and technology, using tools such as: ITIL-based frameworks, Six Sigma-based process improvement, support models, business tool development and company-wide frameworks, automation, and real-time dashboards. Kyle graduated from the University of Washington. In his free time, Kyle is an avid golfer, enjoys traveling (usually related to golfing), and spending time with his wife Amy, daughter Kaylee, and their very large dog Izzy.</p>
             </div>
