--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -53,6 +53,11 @@
                 <h1>IDEAS</h1>
                 <h2>Superior Execution, Every Time</h2>
                 <p class="p-cls"></p>
+                <div class="row text-center">
+                <div class='col-md-6 col-md-offset-3'>
+                    <button onClick="location.href='work.html'" class="btn btn-callToAction btn-block">See our solutions</button>
+                </div>
+            </div>
             </div>
         </div>
     </div>
