--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -159,8 +159,36 @@
             </div>
         </div>
     </section>
-    <footer>
-        © 2015 bpcs.com | All Rights Reserved.
+    <footer class='site-footer'>
+        <div class='row'>
+            <div class='col-md-4'>Site Nav</div>
+            <div class='col-md-4'>
+                <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        </li>
+                        <li>
+                            <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        </li>
+                    </ul>
+
+
+
+
+            </div>
+            <div class='col-md-4'>
+                <p>Whether your business needs include implementing an effective IT strategy, optimizing in the Cloud, or streamlining your business through intelligent applications, the talented teams at Blueprint provide solutions for each of these scenarios and more</p>
+
+            <p>© 2015 bpcs.com | All Rights Reserved.</p></div>
+        </div>
+
+
+
+
+        
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
