--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -160,8 +160,19 @@
         </div>
     </section>
     <footer class='site-footer'>
-        <div class='row'>
-            <div class='col-md-4'>Site Nav</div>
+        <div class='row col-md-10 col-md-offset-1'>
+            <div class='col-md-4'>
+                Our Site
+                <ul class='mine'>
+                    <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                    <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
+                    <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
+                </ul>
+
+
+
+            </div>
             <div class='col-md-4'>
                 <ul class="list-inline banner-social-buttons">
                         <li>
@@ -180,7 +191,6 @@
 
             </div>
             <div class='col-md-4'>
-                <p>Whether your business needs include implementing an effective IT strategy, optimizing in the Cloud, or streamlining your business through intelligent applications, the talented teams at Blueprint provide solutions for each of these scenarios and more</p>
 
             <p>© 2015 bpcs.com | All Rights Reserved.</p></div>
         </div>
