--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -54,10 +54,10 @@
                 <h2>Superior Execution, Every Time</h2>
                 <p class="p-cls"></p>
                 <div class="row text-center">
-                <div class='col-md-6 col-md-offset-3'>
-                    <button onClick="location.href='work.html'" class="btn btn-callToAction btn-block">See our solutions</button>
+                    <div class='col-md-6 col-md-offset-3'>
+                        <button onClick="location.href='work.html'" class="btn btn-callToAction btn-block">See our solutions</button>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
@@ -160,45 +160,34 @@
         </div>
     </section>
     <footer class='site-footer'>
-        <div class='row col-md-10 col-md-offset-1'>
-            <div class='col-md-4'>
-                Our Site
+            <div class='col-md-4 footer-block'>
+                <h3>Site Navigation</h3>
                 <ul class='mine'>
                     <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
                     <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
                     <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                 </ul>
-
-
-
             </div>
-            <div class='col-md-4'>
-                <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                        </li>
-                        <li>
-                            <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-
-
-
-
+            <div class='col-md-4 footer-block'>
+                <h3>Social</h3>
+                <ul class="banner-social-buttons">
+                    <li>
+                        <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                    </li>
+                    <li>
+                        <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                    </li>
+                </ul>
             </div>
-            <div class='col-md-4'>
-
-            <p>© 2015 bpcs.com | All Rights Reserved.</p></div>
-        </div>
-
-
-
-
+            <div class='col-md-4 footer-block'>
+                <h3>Contact Us</h3>
+            </div>
         
+        <div class='col-md-12 col-md-3-offset'>© 2015 bpcs.com | All Rights Reserved.</div>
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
