--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -213,8 +213,36 @@
             </div>
         </div>
         </section>
-        <footer>
-            © 2015 bpcs.com | All Rights Reserved.
+        <footer class='site-footer'>
+            <div class='col-md-4 footer-block'>
+                <h3>Site Navigation</h3>
+                <ul class='mine'>
+                    <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                    <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
+                    <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
+                </ul>
+            </div>
+            <div class='col-md-4 footer-block'>
+                <h3>Social</h3>
+                <ul class="banner-social-buttons">
+                    <li>
+                        <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                    </li>
+                    <li>
+                        <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class='col-md-4 footer-block'>
+                <h3>Contact Us</h3>
+            </div>
+        
+        <div class='col-md-12 col-md-3-offset'>© 2015 bpcs.com | All Rights Reserved.</div>
+    </footer> bpcs.com | All Rights Reserved.
         </footer>
         <!-- FOOTER SECTION END-->
         <!-- REQUIRED SCRIPTS FILES -->
