--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -154,7 +154,7 @@
             <div class="row text-center">
                 <div class='col-md-6 col-md-offset-3'>
                     <h1>Let us show you the proof</h1>
-                    <button onClick="location.href='work.html'" class="btn btn-primary btn-block">See our solutions</button>
+                    <button onClick="location.href='work.html'" class="btn btn-primary btn-block btn-callToAction">See our solutions</button>
                 </div>
             </div>
         </div>
